--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Welcome to Run Tracker"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
@@ -27,7 +27,7 @@
 
         <activity
             android:name=".MapsActivity"
-            android:label="@string/title_activity_maps">
+            android:label="Run Tracker">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
